# px4_gazebo

./: CMakeLists.txt  README.md  package.xml
ROMFS/px4fmu_common/init.d-posix/airframes/: 10016_iris  10051_kopterworx  kopterworx_hawk_all_parameters
launch/: iris.launch  kopterworx.launch  mavros.launch  px4_sitl.launch
models/: CMakeLists.txt
models/kopterworx/: model.config
models/kopterworx/meshes/: kopterworx_model_simple.dae
models/kopterworx/urdf/: kopterworx.urdf.xacro  kopterworx_base.urdf.xacro
models/util/: component_snippets.xacro  multirotor_base.urdf.xacro
